# HTTPIntercepter

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build-and-push-docker-image.yml  ci.yml
backend/: MANIFEST.in  README.md  pyproject.toml
backend/app/: main.py
backend/tests/: test_basic.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/router/: index.ts
frontend/src/stores/: apiStore.ts
frontend/src/types/: vuetify.d.ts
frontend/src/views/: HomeView.vue
